<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/enc18_phone"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".mProgramme"
    tools:showIn="@layout/activity_m_programme">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="56dp"
            android:layout_height="53dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/back"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp" />

        <TextView
            android:id="@+id/programme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/programme_name"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="70dp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="5dp"
            tools:layout_editor_absoluteY="30dp" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="VENDREDI"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="45dp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="100dp"
            tools:layout_editor_absoluteY="165dp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="387dp"
            android:layout_height="wrap_content"
            android:text="@string/text1Vendredi_name"
            android:textAlignment="center"
            app:layout_constraintHorizontal_bias="0.508"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="387dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:text="@string/text2Vendredi_name"
            android:textAlignment="center"
            app:layout_constraintHorizontal_bias="0.508"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/textView4"
            android:layout_width="387dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/text3Vendredi_name"
            android:textAlignment="center"
            app:layout_constraintHorizontal_bias="0.508"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="387dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/text4Vendredi_name"
            android:textAlignment="center"
            app:layout_constraintHorizontal_bias="0.508"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="387dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/text5Vendredi_name"
            android:textAlignment="center"
            app:layout_constraintHorizontal_bias="0.508"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:text="SAMEDI MATIN"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="45dp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="100dp"
            tools:layout_editor_absoluteY="165dp" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/text1Samedi_Matin_name"
            android:textAlignment="center"
            app:layout_constraintHorizontal_bias="0.508"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/text2Samedi_Matin_name"
            android:textAlignment="center"
            app:layout_constraintHorizontal_bias="0.508"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/text3Samedi_Matin_name"
            android:textAlignment="center"
            app:layout_constraintHorizontal_bias="0.508"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/text4Samedi_Matin_name"
            android:textAlignment="center"
            app:layout_constraintHorizontal_bias="0.508"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/samedi_aprem_soir"
            android:textAlignment="center"
            android:textSize="42dp"
            android:textColor="#000000"
            app:layout_constraintHorizontal_bias="0.508"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/samedi_aprem_soir2"
            android:textAlignment="center"
            app:layout_constraintHorizontal_bias="0.508"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/samedi_aprem_soir3"
            android:textAlignment="center"
            app:layout_constraintHorizontal_bias="0.508"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/samedi_aprem_soir4"
            android:textAlignment="center"
            app:layout_constraintHorizontal_bias="0.508"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/samedi_aprem_soir5"
            android:textAlignment="center"
            app:layout_constraintHorizontal_bias="0.508"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/samedi_aprem_soir6"
            android:textAlignment="center"
            app:layout_constraintHorizontal_bias="0.508"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/samedi_aprem_soir7"
            android:textAlignment="center"
            app:layout_constraintHorizontal_bias="0.508"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/note"
            android:textColor="#000000"
            android:textAlignment="center"
            app:layout_constraintHorizontal_bias="0.508"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />




    </LinearLayout>


</android.support.v4.widget.NestedScrollView>