<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".mCommingSoon"
    android:background="@drawable/enc18_phone"
    >

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="437dp"
        android:layout_height="186dp"
        android:background="#fff"
        android:paddingRight="250dp"
        app:srcCompat="@drawable/eglise"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="103dp"
        android:layout_height="104dp"
        android:layout_marginLeft="100dp"
        app:layout_constraintHorizontal_bias="0.259"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:srcCompat="@drawable/bulle"
        tools:layout_editor_absoluteY="0dp" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="94dp"
        android:layout_height="88dp"
        android:layout_marginRight="250dp"
        android:layout_marginTop="260dp"
        app:layout_constraintHorizontal_bias="0.597"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/triangle" />

    <View
        android:layout_width="370dp"
        android:layout_height="229dp"
        android:layout_marginTop="190dp"
        android:background="#fff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.49" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Prochainement:"
        tools:layout_editor_absoluteX="270dp"
        tools:layout_editor_absoluteY="392dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textStyle="bold"
        android:textColor="#000000"
        android:textSize="20dp"
        />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/evenement1"
        tools:layout_editor_absoluteX="270dp"
        tools:layout_editor_absoluteY="392dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="100dp"
        android:textStyle="bold"
        android:textColor="#000000"
        android:textSize="20dp"
        />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/evenement2"
        tools:layout_editor_absoluteX="270dp"
        tools:layout_editor_absoluteY="392dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="200dp"
        android:textStyle="bold"
        android:textColor="#000000"
        android:textSize="20dp"
        />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/evenement3"
        tools:layout_editor_absoluteX="270dp"
        tools:layout_editor_absoluteY="392dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="300dp"
        android:textStyle="bold"
        android:textColor="#000000"
        android:textSize="20dp"
        />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="56dp"
        android:layout_height="53dp"
        app:srcCompat="@drawable/back"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp" />

</android.support.constraint.ConstraintLayout>